# parallel-computing-technologies

./: .gitignore  AGENTS.md
course-work/docs/: sources.txt
course-work/docs/figures/: iteration-flow.drawio
course-work/docs/plans/: plan-explanatory-note_36b49499.plan.md
course-work/docs/presentation/: presentation-plan.md  speech-for-defense-5min.md  speech-per-slide.md
course-work/docs/report/: course-work.docx  course-work.md  sources-tracker.md  sources.txt
course-work/project/: README.md  justfile  pyproject.toml
course-work/project/benchmark/: __init__.py  __main__.py  config.py  export.py  load_result.py  models.py  plot_style.py  plots.py  plots_from_data.py  recommend.py  runner.py  stats.py
course-work/project/final_results/benchmarks/15-03_23-40/: equipment.txt
course-work/project/final_results/benchmarks/15-03_23-40/data/: benchmark_data.json  benchmark_times.csv  table.tex
course-work/project/final_results/benchmarks/26-03_16-45/: benchmark_data.json  benchmark_times.csv  equipment.txt  output.txt  table.tex
course-work/project/src/bitonic/: __init__.py  base.py  parallel.py  sequential.py
course-work/project/tests/: test_bitonic_sort.py  test_bitonic_sort_large.py
course-work/project/utils/sorting_network/: __init__.py  __main__.py  bitonic.py  comparator.py  network.py  svg.py  view.py
lab1/docs/report/: lab1.md
lab2/docs/: high-level-concurrency-objects.pptx  threads-control.pptx
lab2/report/: lab2.md
lab3/project/: .gitignore  README.md  justfile
lab3/project/plots/: README.md  pyproject.toml
lab3/project/plots/plots/: __init__.py  __main__.py
lab4/project/: .gitignore  justfile
lab4/project/plots/: README.md  pyproject.toml
lab4/project/plots/lab4_plots/: __init__.py  __main__.py  task2.py
mkr1/code/: Question15.java  Question17.java  Question20.java  Question4.java  Question8.java
(+110 files in other folders)
