[project]
name = "bitonic-sort"
version = "0.1.0"
description = "Bitonic Sort algorithm and its parallel implementation in Python using multiprocessing"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "pyperf>=2.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
# E402: imports after path setup needed so benchmark can import from src
"**/benchmark/__init__.py" = ["E402"]
"**/benchmark/__main__.py" = ["E402"]


[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
