[project]
name = "lab3-plots"
version = "0.1.0"
description = "Plots for lab3 matrix multiplication benchmarks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plots"]

[tool.uv]
package = true
