[project]
name = "lab4-plots"
version = "0.1.0"
description = "Plots for lab4 ForkJoin text benchmarks (CSV from Java)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lab4_plots"]

[tool.uv]
package = true
